--- a/tehnici web/matrici/index.html
+++ b/tehnici web/matrici/index.html
@@ -14,24 +14,24 @@
         </div>
         <div class="row">
             <div class="col-md-6 center-content">
-                <h1>MATRICE A</h1>
+                <h1>1<sup>st</sup>MATRIX</h1>
                 <form class="form-inline">
                     <div class="form-group">
-                        <input type="number" id="lines-A" class="form-control number-forms" value="1" min="1" max="8"><b>LINII</b>
-                        <input type="number" id="columns-A" class="form-control number-forms" value="1" min="1" max="8"><b>COLOANE</b>
+                        <input type="number" id="lines-A" class="form-control number-forms" value="1" min="1" max="8"><b>LINES</b>
+                        <input type="number" id="columns-A" class="form-control number-forms" value="1" min="1" max="8"><b>COLUMNS</b>
                     </div>
                 </form>
-                <a href="#" id="fill-matrix-A">Genereaza matrice</a>
+                <a href="#" id="fill-matrix-A">Generate matrix</a>
             </div>
             <div class="col-md-6 center-content">
-                <h1>MATRICE B</h1>
+            <h1>2<sup>nd</sup>MATRIX</h1>
                 <form class="form-inline">
                     <div class="form-group">
-                        <input type="number" id="lines-B" class="form-control number-forms" value="1" min="1" max="8"><b>LINII</b>
-                        <input type="number" id="columns-B" class="form-control number-forms" value="1" min="1" max="8"><b>COLOANE</b>
+                        <input type="number" id="lines-B" class="form-control number-forms" value="1" min="1" max="8"><b>LINES</b>
+                        <input type="number" id="columns-B" class="form-control number-forms" value="1" min="1" max="8"><b>COLUMNS</b>
                     </div>
                 </form>
-                <a href="#" id="fill-matrix-B">Genereaza matrice</a>
+                <a href="#" id="fill-matrix-B">Generate matrix</a>
             </div>
         </div>
         <div class="row">
@@ -40,31 +40,26 @@
                 <button type="button" class="btn btn-success button" id="multiply-btn">x</button>
             </div>
         </div>
-
         <div class="row">
             <div class="col-lg-6 col-md-6 center-content">
                 <div id="container-A" />
             </div>
         </div>
-
         <div class="row">
                 <div class="col-lg-6 col-md-6 center-content">
                     <div id="container-B" />
                 </div>
         </div>
-
         <div class="row">
             <div class="col-md-6 col-md-offset-3 center-content">
-                <h1>REZULTAT</h1>
+                <h1>RESULT</h1>
             </div>
         </div>
-
         <div class="row">
             <div class="col-lg-12 col-md-12 center-content">
                 <div id="container-C" />
             </div>
         </div>
-
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="script.js"></script>
