--- a/tehnici web/complexe/index.html
+++ b/tehnici web/complexe/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="container-fluid well main-container">
+    <div class="container-fluid well main-container bg-light">
 
         <div class="header fill-gap-space">
             <h1 class="page-header text-center">Complex number operations<h1>
@@ -18,7 +18,7 @@
             <div class="col-md-8 col-md-offset-2 input-wrapper">
                 <form class="form-inline">
                     <div class="form-group">
-                            <p>1<sup>st</sup>N<sup>o</sup></p>
+                            <p>1<sup>st</sup>No</p>
                             <label for="real-first" class="col-2 col-form-label">Real part</label>
                             <input type="number" class="form-control number-forms" id="real-first" >
                             <label for="imaginary-first" class="col-2 col-form-label">Imaginary part</label>
@@ -28,7 +28,7 @@
                 </form>
                 <form class="form-inline">
                     <div class="form-group">
-                        <p>2<sup>nd</sup>N<sup>o</sup></p>
+                        <p>2<sup>nd</sup>No</p>
                         <label for="real-second" class="col-2 col-form-label">Real part</label>
                         <input type="number" class="form-control number-forms" id="real-second">
                         <label for="imaginary-second" class="col-2 col-form-label">Imaginary part</label>
@@ -55,6 +55,25 @@
             </div>
         </div>
     </div>
+    <div>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">Complex numbers</a>
+                </li>
+                <li>
+                    <a href="../matrici/index.html">Matrices</a>
+                </li>
+                <li>
+                    <a href="../ecuatia-de-gradul-2/index.html">Quadratic equation</a>
+                </li>
+                <li>
+                    <a href="../index.html">Go back home!</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="my-script.js"></script>
 </body>
