--- a/tehnici web/index.html
+++ b/tehnici web/index.html
@@ -1,16 +1,88 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <nav>
-            <ul>
-                <li><a href="./complexe/index.html">Operatii cu numere complexe</a></li>
-                <li><a href="./matrici/index.html">Operatii cu matrici</a></li>
-                <li><a href="./ecuatia-de-gradul-2/index.html">Ecuatia de gradul II</a></li>
-            </ul>
-        </nav>
+<!doctype html>
+<html lang="en">
 
-    </body>
+<head>
+    <title>Fun mathematics</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="jumbotron jumbotron-fluid bg-info text-white text-center">
+        <div class="container">
+            <h1 class="display-4">Matemathematics can be fun (really)!</h1>
+            <p class="lead">Here is a collection of mathematical activities containing an element of 'fun'! </p>
+            <hr class="my-4">
+            <!-- <p>Some activities will be perfect for the last ten minutes of a gruelling double period while others could be saved for the last lesson of term.</p> -->
+            <p>
+                <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapsable-container" aria-expanded="false"
+                    aria-controls="collapsable-container">
+                    Learn more!
+                </button>
+            </p>
+        </div>
+    </div>
+
+    <div class="container collapse" id="collapsable-container">
+
+        <div class="row add-gap">
+
+            <div class="col-sm-6 col-md-4 add-gap">
+                <div class="card smaller-card" >
+                    <img class="card-img-top" src="./images/complex-number.gif" alt="Card image cap">
+                    <div class="card-body">
+                        <h4 class="card-title">Complex numbers</h4>
+                        <p class="card-text">Review complex number addition, subtraction, and multiplication.</p>
+                        <a href="./complexe/index.html" class="btn btn-primary">Let's play!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4 add-gap">
+                <div class="card smaller-card" >
+                    <img class="card-img-top" src="./images/matrices.gif" alt="Card image cap">
+                    <div class="card-body">
+                        <h4 class="card-title">Matrices</h4>
+                        <p class="card-text">There are a number of basic operations that can be applied to modify matrices, out of which we have picked addition and multiplication.</p>
+                        <a href="./matrici/index.html" class="btn btn-primary">Let's play!</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <div class="card smaller-card add-gap" >
+                    <img class="card-img-top" src="./images/quadratics.png" alt="Card image cap">
+                    <div class="card-body">
+                        <h4 class="card-title">Quadratic equation</h4>
+                        <p class="card-text">Is it Quadratic? Quadratic Equation. Only if it can be put in the form ax2 + bx + c = 0, and a is not zero.</p>
+                        <a href="./ecuatia-de-gradul-2/index.html" class="btn btn-primary">Let's play!</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+            <div class="row justify-content-md-center">
+                <div class="col-sm-6 col-md-4 add-gap">
+                    <div class="card smaller-card">
+                        <img class="card-img-top" src="./images/quadratics.png" alt="Card image cap">
+                        <div class="card-body">
+                            <h4 class="card-title">Factorial Calculator</h4>
+                            <p class="card-text">Is it Quadratic? Quadratic Equation. Only if it can be put in the form ax2 + bx + c = 0, and a is not zero.</p>
+                            <a href="./ecuatia-de-gradul-2/index.html" class="btn btn-primary">Let's play!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </div>
+
+    <!-- jQuery first, then Tether, then Bootstrap JS. -->
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
+        crossorigin="anonymous"></script>
+  </body>
+
 </html>
