--- a/tehnici web/matrici/index.html
+++ b/tehnici web/matrici/index.html
@@ -8,6 +8,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+        <nav>
+            <ul>
+                <li>
+                    <a href="../complexe/index.html">Complex numbers</a>
+                </li>
+                <li>
+                    <a href="#">Matrices</a>
+                </li>
+                <li>
+                    <a href="../ecuatia-de-gradul-2/index.html">Quadratic equation</a>
+                </li>
+                <li>
+                    <a href="../index.html">Go back home!</a>
+                </li>
+            </ul>
+        </nav>
+
     <div class="container well">
         <div class="header sticky-top">
             <h1 class="page-header text-center"><h1>
