--- a/my-tribute-page/index.html
+++ b/my-tribute-page/index.html
@@ -1,84 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <title>Bonobo - Tribute Page</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat|Comfortaa">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css"> </script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <head>
+        <title>Bonobo - Tribute Page</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+            crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat|Comfortaa">
+        <link rel="stylesheet" href="style.css">
+    </head>
 
-
-    <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-
-    <div class="container-fluid">
-
+    <body>
+        <header>
             <div class="header">
-                <h1 class="page-header text-center">Bonobo<h1>
+                <h1 class="text-center">Bonobo</h1>
             </div>
+        </header>
+        <main>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4 well">
+                        <img src="https://i.scdn.co/image/8822cefd38100390e68c77481d4d2cd90f74bb32" class="img-responsive center-block thumbnail"
+                            alt="Bonobo">
+                        <blockquote>If you walk into a record store and say you're looking for the new Bonobo record, you'll probably be pointed
+                            to the electronic section. But Simon Green, the man behind the simian moniker, doesn't really see himself
+                            as an electronic artist.</blockquote>
+                    </div>
+                    <div class="col-md-8 story">
+                        <p>Over the course of five albums for the legendary label Ninja Tune, a myriad of tours, singles, remixes and production
+                            work for other artists, Bonobo has built a large, loyal and engaged global fanbase: over half a million album
+                            sales and over one hundred and fifty million streams on Spotify point to the levels of success achieved by
+                            this quiet, self-effacing man. Most recently, Bonobo curated an international series of Outlier events including
+                            a sold out all day festival at Tobacco Dock in London and further parties in Berlin, Madrid, Paris and New
+                            York.</p>
+                        <p>His first album - 2000's “Animal Magic” - was released via Tru Thoughts before being picked up by Ninja Tune.
+                            It announced him as a serious talent; able to bring a true musician's edge to electronica, with all the freedom
+                            that skill allowed. His subsequent albums for Ninja, “Dial M for Monkey” and “Days to Come”, developed his
+                            sensibility, won him fans across the globe, and saw him evolve his live show into a mesmeric re-working of
+                            his records.</p>
+                        <img src="bonobo-banner.jpg" class="img-responsive center-block thumbnail" alt="Bonobo sold out all day festival at Tobacco Dock in London ">
+                    </div>
+                </div>
 
-        <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-12 well" id="div1">
-                <img src="https://i.scdn.co/image/8822cefd38100390e68c77481d4d2cd90f74bb32" class="img-responsive center-block thumbnail" alt="Bonobo">
-                <blockquote>If you walk into a record store and say you're looking for the new Bonobo record, you'll probably be pointed to the electronic section. But Simon Green, the man behind the simian moniker, doesn't really see himself as an electronic artist.</blockquote>
+                <div class="container discography">
+                    <div class="row">
+                        <h4>Singles and EPs</h4>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <ul>
+                                <li>Scuba EP (2000)</li>
+                                <li>The Shark EP (2000)</li>
+                                <li>One Offs, Remixes &amp; B-Sides (2002)</li>
+                                <li>Kota EP (2002)</li>
+                                <li>Pick Up EP (2003)</li>
+                                <li>Flutter EP (2003)</li>
+                                <li>The Keeper (feat. Andreya Triana) EP (2009)</li>
+                            </ul>
+                        </div>
+                        <div class="col-md-6">
+                            <ul>
+                                <li>Stay the Same (feat. Andreya Triana) (2009)</li>
+                                <li>Eyesdown (feat. Andreya Triana) (2010)</li>
+                                <li>Cirrus (2013)</li>
+                                <li>First Fires (feat. Grey Reverend) (2013)</li>
+                                <li>Ten Tigers EP (2014)</li>
+                                <li>The Flashlight EP (2014)</li>
+                                <li>Bambro Koyo Ganda EP (2017)</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
-
-            <div class="col-lg-8 col-md-8 col-sm-12" id="div2">
-                <p>Over the course of five albums for the legendary label Ninja Tune, a myriad of tours, singles, remixes and production work for other artists, Bonobo has built a large, loyal and engaged global fanbase: over half a million album sales and over one hundred and fifty million streams on Spotify point to the levels of success achieved by this quiet, self-effacing man. Most recently, Bonobo curated an international series of Outlier events including a sold out all day festival at Tobacco Dock in London and further parties in Berlin, Madrid, Paris and New York.</p>
-                <p>His first album - 2000's “Animal Magic” - was released via Tru Thoughts before being picked up by Ninja Tune. It announced him as a serious talent; able to bring a true musician's edge to electronica, with all the freedom that skill allowed. His subsequent albums for Ninja, “Dial M for Monkey” and “Days to Come”, developed his sensibility, won him fans across the globe, and saw him evolve his live show into a mesmeric re-working of his records.</p>
-                <img src="bonobo-banner.jpg"  class="img-responsive center-block thumbnail" alt="Bonobo sold out all day festival at Tobacco Dock in London ">
-            </div>
-        </div>
-
-        <div class="row yellow-bk">
-            <h4>Singles and EPs</h4>
-        </div>
-
-        <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                    <ul>
-                        <li>Scuba EP (2000)</li>
-                        <li>Terrapin EP (2000)</li>
-                        <li>Silver EP (2000)</li>
-                        <li>The Shark EP (2000)</li>
-                        <li>One Offs, Remixes &amp; B-Sides (2002)</li>
-                        <li>Kota EP (2002)</li>
-                        <li>Pick Up EP (2003)</li>
-                    </ul>
-            </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <ul>
-                    <li>Scuba EP (2000)</li>
-                    <li>Terrapin EP (2000)</li>
-                    <li>Silver EP (2000)</li>
-                    <li>The Shark EP (2000)</li>
-                    <li>One Offs, Remixes &amp; B-Sides (2002)</li>
-                    <li>Kota EP (2002)</li>
-                    <li>Pick Up EP (2003)</li>
-                </ul>
-             </div>
-            <div class="col-lg-4 col-md-4 col-sm-12">
-                <ul>
-                    <li>Scuba EP (2000)</li>
-                    <li>Terrapin EP (2000)</li>
-                    <li>Silver EP (2000)</li>
-                    <li>The Shark EP (2000)</li>
-                    <li>One Offs, Remixes &amp; B-Sides (2002)</li>
-                    <li>Kota EP (2002)</li>
-                    <li>Pick Up EP (2003)</li>
-                </ul>
-            </div>
-        </div>
-
-
-
-    </div>
-
-</body>
+        </main>
+    </body>
 
 </html>
