--- a/tehnici web/complexe/index.html
+++ b/tehnici web/complexe/index.html
@@ -68,6 +68,9 @@
                     <a href="../ecuatia-de-gradul-2/index.html">Quadratic equation</a>
                 </li>
                 <li>
+                    <a href="../factorial/index.html">Factorials</a>
+                </li>
+                <li>
                     <a href="../index.html">Go back home!</a>
                 </li>
             </ul>
