--- a/tehnici web/ecuatia-de-gradul-2/index.html
+++ b/tehnici web/ecuatia-de-gradul-2/index.html
@@ -17,7 +17,10 @@
                 <a href="../matrici/index.html">Matrices</a>
             </li>
             <li>
-                <a href="./ecuatia-de-gradul-2/index.html">Quadratic equation</a>
+                <a href="#">Quadratic equation</a>
+            </li>
+            <li>
+                <a href="../factorial/index.html">Factorials</a>
             </li>
             <li>
                 <a href="../index.html">Go back home!</a>
@@ -38,15 +41,15 @@
 
                     <div class="row">
                         <div class="col-md-4 mb-3">
-                            <label for="validationServer01">X<sup>2</sup></label>
-                            <span><input type="number" class="form-control is-valid" id="a" placeholder="a" required>X +</span>
+                            <label for="a">X<sup>2</sup></label>
+                            <span><input type="number" class="form-control is-valid" id="a" placeholder="a" required> </span>
                         </div>
                         <div class="col-md-4 mb-3">
-                            <label for="validationServer02">X</label>
-                            <input type="number" class="form-control is-valid" id="b" placeholder="b" required>X +
+                            <label for="b">X</label>
+                            <input type="number" class="form-control is-valid" id="b" placeholder="b" required>
                         </div>
                         <div class="col-md-4 mb-3">
-                            <label for="validationServer02">c</label>
+                            <label for="c"></label>
                             <input type="number" class="form-control is-valid" id="c" placeholder="c"  required>
                         </div>
                     </div>
