--- a/tehnici web/index.html
+++ b/tehnici web/index.html
@@ -16,12 +16,10 @@
             <p class="lead">Here is a collection of mathematical activities containing an element of 'fun'! </p>
             <hr class="my-4">
             <!-- <p>Some activities will be perfect for the last ten minutes of a gruelling double period while others could be saved for the last lesson of term.</p> -->
-            <p>
                 <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapsable-container" aria-expanded="false"
                     aria-controls="collapsable-container">
                     Learn more!
                 </button>
-            </p>
         </div>
     </div>
 
@@ -65,11 +63,11 @@
             <div class="row justify-content-md-center">
                 <div class="col-sm-6 col-md-4 add-gap">
                     <div class="card smaller-card">
-                        <img class="card-img-top" src="./images/quadratics.png" alt="Card image cap">
+                        <img class="card-img-top" src="./images/factorial.jpg" alt="Card image cap">
                         <div class="card-body">
                             <h4 class="card-title">Factorial Calculator</h4>
-                            <p class="card-text">Is it Quadratic? Quadratic Equation. Only if it can be put in the form ax2 + bx + c = 0, and a is not zero.</p>
-                            <a href="./ecuatia-de-gradul-2/index.html" class="btn btn-primary">Let's play!</a>
+                            <p class="card-text">In mathematics, the factorial of a non-negative integer n, denoted by n!, is the product of all positive integers less than or equal to n</p>
+                            <a href="./factorial/index.html" class="btn btn-primary">Let's play!</a>
                         </div>
                     </div>
                 </div>
